--- a/memestore_front/package.json
+++ b/memestore_front/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "axios": "^1.4.0",
         "core-js": "^3.8.3",
+        "dom-to-image": "^2.6.0",
         "html2canvas": "^1.4.1",
         "sass-loader": "^13.3.2",
         "vue": "^3.2.13",
